examples/invalid/variables7.cp
var money is 1.000.000;